--- a/templates/default/suricata.upstart.erb
+++ b/templates/default/suricata.upstart.erb
@@ -6,4 +6,6 @@ stop on runlevel [!2345]
 respawn
 respawn limit 10 60 # 10 times in 60 seconds
 
-exec /usr/bin/suricata -c <%= node['suricata']['config_file'] %> -i <%= node['suricata']['interface'] %>
+expect fork
+
+exec /usr/bin/suricata -D --pidfile <%= node['suricata']['pid_file'] %> -c <%= node['suricata']['config_file'] %> -i <%= node['suricata']['interface'] %>
