--- a/templates/default/pulledpork.conf.erb
+++ b/templates/default/pulledpork.conf.erb
@@ -16,14 +16,14 @@
 # i.e. rule_url=http://x.y.z/|a.tar.gz|123,http://z.y.z/|b.tar.gz|456
 # note that the url, rule file, and oinkcode itself are separated by a pipe |
 # i.e. url|tarball|123456789, 
-rule_url=https://www.snort.org/reg-rules/|snortrules-snapshot.tar.gz|<oinkcode>
+#rule_url=https://www.snort.org/reg-rules/|snortrules-snapshot.tar.gz|<oinkcode>
 # NEW Community ruleset:
-rule_url=https://s3.amazonaws.com/snort-org/www/rules/community/|community-rules.tar.gz|Community
+#rule_url=https://s3.amazonaws.com/snort-org/www/rules/community/|community-rules.tar.gz|Community
 # NEW For IP Blacklisting! Note the format is urltofile|IPBLACKLIST|<oinkcode>
 # This format MUST be followed to let pulledpork know that this is a blacklist
-rule_url=http://labs.snort.org/feeds/ip-filter.blf|IPBLACKLIST|open
+#rule_url=http://labs.snort.org/feeds/ip-filter.blf|IPBLACKLIST|open
 # URL for rule documentation! (slow to process)
-rule_url=https://www.snort.org/reg-rules/|opensource.gz|<oinkcode>
+#rule_url=https://www.snort.org/reg-rules/|opensource.gz|<oinkcode>
 #rule_url=https://rules.emergingthreatspro.com/|emerging.rules.tar.gz|open
 # THE FOLLOWING URL is for etpro downloads, note the tarball name change!
 # and the et oinkcode requirement!
@@ -32,6 +32,9 @@ rule_url=https://www.snort.org/reg-rules/|opensource.gz|<oinkcode>
 # portion of the tarball name, this is because PP now automatically populates
 # this value for you, if, however you put the version information in, PP will
 # NOT populate this value but will use your value!
+<% node['pulledpork']['rule_urls'].each do |rule_url| %>
+rule_url=<%= rule_url %>
+<% end %>
 
 # Specify rule categories to ignore from the tarball in a comma separated list
 # with no spaces.  There are four ways to do this:
@@ -69,7 +72,7 @@ temp_path=/tmp
 # rules? (this value has changed as of 0.4.0, previously we copied 
 # all of the rules, now we are creating a single large rules file
 # but still keeping a separate file for your so_rules!
-rule_path=/usr/local/etc/snort/rules/snort.rules
+rule_path=<%= File.join(node['suricata']['rules_path'], node['suricata']['rule_file']) %>
 
 # What path you want the .rules files to be written to, this is UNIQUE
 # from the rule_path and cannot be used in conjunction, this is to be used with the
@@ -84,16 +87,16 @@ rule_path=/usr/local/etc/snort/rules/snort.rules
 # files that are local to your system here by adding a comma and more paths...
 # remember that the FULL path must be specified for EACH value.
 # local_rules=/path/to/these.rules,/path/to/those.rules
-local_rules=/usr/local/etc/snort/rules/local.rules
+#local_rules=/usr/local/etc/snort/rules/local.rules
 
 # Where should I put the sid-msg.map file?
-sid_msg=/usr/local/etc/snort/sid-msg.map
+sid_msg=<%= node['suricata']['sid_msg'] %>
 
 # New for by2 and more advanced msg mapping.  Valid options are 1 or 2
 # specify version 2 if you are running barnyard2.2+.  Otherwise use 1
-sid_msg_version=1
+sid_msg_version=2
 
-# Where do you want me to put the sid changelog?  This is a changelog 
+# Where do you want me to put the sid changelog?  This is a changelog
 # that pulledpork maintains of all new sids that are imported
 sid_changelog=/var/log/sid_changes.log
 # this value is optional
@@ -107,14 +110,14 @@ sid_changelog=/var/log/sid_changes.log
 
 # What path you want the .so files to actually go to *i.e. where is it
 # defined in your snort.conf, needs a trailing slash
-sorule_path=/usr/local/lib/snort_dynamicrules/
+#sorule_path=/usr/local/lib/snort_dynamicrules/
 
 # Path to the snort binary, we need this to generate the stub files
-snort_path=/usr/local/bin/snort
+#snort_path=/usr/local/bin/snort
 
 # We need to know where your snort.conf file lives so that we can
 # generate the stub files
-config_path=/usr/local/etc/snort/snort.conf
+#config_path=/usr/local/etc/snort/snort.conf
 
 ##### Deprecated - The stubs are now  categorically written to the  single rule file!
 # sostub_path=/usr/local/etc/snort/rules/so_rules.rules
@@ -128,7 +131,7 @@ config_path=/usr/local/etc/snort/snort.conf
 # FreeBSD-7-3, FreeBSD-8-1
 # OpenBSD-4-8
 # Slackware-13-1
-distro=FreeBSD-8.1
+#distro=Ubuntu-12-4
 
 #######  This next section is optional, but probably pretty useful to you.
 #######  Please read thoroughly!
@@ -136,7 +139,7 @@ distro=FreeBSD-8.1
 # If you are using IP Reputation and getting some public lists, you will probably
 # want to tell pulledpork where your blacklist file lives, PP automagically will
 # de-dupe any duplicate IPs from different sources.
-black_list=/usr/local/etc/snort/rules/iplists/default.blacklist
+#black_list=/usr/local/etc/snort/rules/iplists/default.blacklist
 
 # IP Reputation does NOT require a full snort HUP, it introduces a concept whereby
 # the IP list can be reloaded while snort is running through the use of a control
@@ -145,10 +148,10 @@ black_list=/usr/local/etc/snort/rules/iplists/default.blacklist
 # configure these!  The following option tells pulledpork where to place the version
 # file for use with control socket ip list reloads!
 # This should be the same path where your black_list lives!
-IPRVersion=/usr/local/etc/snort/rules/iplists
+#IPRVersion=/usr/local/etc/snort/rules/iplists
 
 # The following option tells snort where the snort_control tool is located.
-snort_control=/usr/local/bin/snort_control
+#snort_control=/usr/local/bin/snort_control
 
 # What do you want to backup and archive?  This is a comma separated list
 # of file or directory values.  If a directory is specified, PP will recurse
@@ -180,7 +183,7 @@ snort_control=/usr/local/bin/snort_control
 # HUP after PP has completed its run.
 # pid_path=/var/run/snort.pid,/var/run/barnyard.pid,/var/run/barnyard2.pid
 # and so on...
-# pid_path=/var/run/snort_eth0.pid
+pid_path=<%= node['suricata']['pid_file'] %>
 
 # This defines the version of snort that you are using, for use ONLY if the 
 # proper snort binary is not on the system that you are fetching the rules with
@@ -191,10 +194,10 @@ snort_control=/usr/local/bin/snort_control
 
 # Here you can specify what rule modification files to run automatically.
 # simply uncomment and specify the apt path.
-# enablesid=/usr/local/etc/snort/enablesid.conf
-# dropsid=/usr/local/etc/snort/dropsid.conf
-# disablesid=/usr/local/etc/snort/disablesid.conf
-# modifysid=/usr/local/etc/snort/modifysid.conf
+enablesid=/etc/pulledpork/enablesid.conf
+dropsid=/etc/pulledpork/dropsid.conf
+disablesid=/etc/pulledpork/disablesid.conf
+modifysid=/etc/pulledpork/modifysid.conf
 
 # What is the base ruleset that you want to use, please uncomment to use
 # and see the README.RULESETS for a description of the options.  
