Run pulledpork with -H (HUP) -T (no so_rules) -l (log to syslog) -E (write only enabled rules)

--- a/templates/default/disablesid.conf.erb
+++ b/templates/default/disablesid.conf.erb
@@ -36,3 +36,5 @@
 # The modifications in this file are for sample/example purposes only and
 # should not actively be used, you need to modify this file to fit your 
 # environment.
+
+<%= node['pulledpork']['disablesids'].join("\n") %>
