--- a/templates/default/modifysid.conf.erb
+++ b/templates/default/modifysid.conf.erb
@@ -38,3 +38,5 @@
 # that it is a SNORTSAM block rule!
 # 17803 "\(msg:"" "\(msg:"SNORTSAM ";
 # 17803 "^\s*alert" "BLOCK";
+
+<%= node['pulledpork']['modifysids'].join("\n") %>
