--- a/templates/default/enablesid.conf.erb
+++ b/templates/default/enablesid.conf.erb
@@ -40,3 +40,5 @@
 # The modifications in this file are for sample/example purposes only and
 # should not actively be used, you need to modify this file to fit your 
 # environment.
+
+<%= node['pulledpork']['enablesids'].join("\n") %>
